# pdfr

./: Cargo.toml  README.md
libjpegturbo-sys/: Cargo.toml  build.rs  wrapper.h
pdfium-sys/: Cargo.toml  build.rs  wrapper.h
src/: bindings.rs  main.rs  syntax.rs
src/commands/: add_image.rs  add_text.rs  create.rs  edit.rs  extract_images.rs  mod.rs  page_count.rs  render.rs
